fix minor layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@ body,
 #root,
 .App {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 body {
@@ -102,7 +103,7 @@ ul {
 }
 
 .shadow {
-    animation: shadows 1.5s linear forwards;
+    animation: shadows 2s linear forwards;
 }
 
 @keyframes shadows {
